# genixjur-lumen

./: .gitignore  CLAUDE.md  CURRENT_STATUS.md  DOMAIN_VERIFICATION.md  GO_LIVE.md  Lumen - Landing Page.html  Lumen - app.html  README.md  ROADMAP.md  index.html  vercel.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/lumen_api/: main.py
apps/scanner-cli/: pyproject.toml
apps/scanner-cli/lumen_scanner/: __init__.py  cli.py  models.py  parecer.py  scanner.py  semantic.py
apps/scanner-cli/lumen_scanner/detectors/: __init__.py  metadata.py  micro_font.py  ocg.py  off_page.py  white_text.py  zwc.py
apps/web/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/public/demo/: index.html
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analysis/[id]/: page.tsx
apps/web/src/app/analyze/: page.tsx
apps/web/src/app/auth/callback/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/layout/: Sidebar.tsx
apps/web/src/lib/supabase/: middleware.ts
apps/web/src/lib/types/: database.ts
infra/fly/: fly.toml
infra/supabase/migrations/: 001_initial_schema.sql  002_fix_signup_trigger.sql
tests/: conftest.py  test_api.py  test_detectors.py  test_parecer.py  test_scanner.py
tests/fixtures/: generate_test_pdfs.py
