[project]
name = "lumen-api"
version = "0.1.0"
description = "Lumen API — FastAPI wrapper for Lumen Scanner"
authors = [{ name = "HubTech", email = "lumen@hubtech.ai" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "lumen-scanner",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lumen_api*"]
