[project]
name = "lumen-scanner"
version = "0.1.0"
description = "Lumen Scanner — detector forense de prompt injection em documentos jurídicos"
authors = [{ name = "HubTech", email = "lumen@hubtech.ai" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pymupdf>=1.24.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "anthropic>=0.39.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
]

[project.scripts]
lumen = "lumen_scanner.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lumen_scanner*"]
